По умолчанию открыт только первый блок

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </details>
 
 <!-- Flax box -->
-<details open>
+<details>
     <summary>Flex box</summary>
     <div>
         <ul class="nav">
@@ -86,7 +86,7 @@
 </details>
 
 <!-- Grid layout -->
-<details open>
+<details>
     <summary>Grid Layout</summary>
     <div>
         <ul class="nav">
