--- a/grid/positioning-off-elements.html
+++ b/grid/positioning-off-elements.html
@@ -5,16 +5,136 @@
     <title>Позиционирование элементов</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
-        /*  */
+        .grid-container {
+            border: solid 2px #000;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(3, 5em);
+        }
+        .grid-item {
+            text-align:center;
+            font-size: 1.1em;
+            padding: 1.5em;
+            color: white;
+        }
+        .color1 {background-color: #675BA7;}
+        .color2 {background-color: #9BC850;}
+        .color3 {background-color: #A62E5C;}
+        .color4 {background-color: #2A9FBC;}
+        .color5 {background-color: #4e342e;}
+        
+        /* COLUMN POSITION */
+        .special-column-item1 {
+            grid-column-start: 2;
+            grid-column-end: 5;
+            /*
+                ИЛИ:
+                grid-column: grid-column-start / grid-column-end;
+                Например:
+                grid-column: 2 / 5;
+            */
+        }
+        .special-column-item2 {
+            grid-column-start: 3;
+            grid-column-end: 5;
+        }
+
+        /* ROW POSITION */
+        .special-row-item1 {
+            grid-column-start: 2;
+            grid-row-start: 1;
+            grid-row-end: 3;
+            /*
+                ИЛИ:
+                grid-row: grid-row-start / grid-row-end;
+                Например:
+                grid-row: 1 / 3;
+            */
+        }
+
+        /* SPECIAL SPAN */
+        .special-span-item1 {
+            grid-row: 1 / span 2;
+            grid-column: 2 / span 2;
+        }
+
+        /* GRID AREA */
+        .grid-area-item1 {
+            /* grid-area: row-start / column-start / row-end / column-end */
+            grid-area: 1 / 2 / 3 / 4;
+        }
     </style>
 </head>
 <body>
     <!-- Header -->
     <header><nav><a href="./../"><< Главная</a></nav></header>
 
-    <!--  -->
+    <img src="../assets/images/grid20.png" alt="Позиционирование элементов Grid">
+
+    <!-- column position -->
     <section>
-        <h2>###</h2>
+        <h2>Позиция колонок</h2>
+        <div class="grid-container">
+            <div class="grid-item color1">Grid Item 1</div>
+            <div class="grid-item color2 special-column-item1">Grid Item 2</div>
+            <div class="grid-item color3">Grid Item 3</div>
+            <div class="grid-item color4">Grid Item 4</div>
+            <div class="grid-item color5">Grid Item 5</div>
+            <div class="grid-item color1">Grid Item 6</div>
+            <div class="grid-item color4">Grid Item 7</div>
+        </div>
+        <br>
+        <div class="grid-container">
+            <div class="grid-item color1">Grid Item 1</div>
+            <div class="grid-item color2 special-column-item2">Grid Item 2</div>
+            <div class="grid-item color3">Grid Item 3</div>
+            <div class="grid-item color4">Grid Item 4</div>
+            <div class="grid-item color5">Grid Item 5</div>
+            <div class="grid-item color1">Grid Item 6</div>
+            <div class="grid-item color4">Grid Item 7</div>
+        </div>
+    </section>
+    
+    <!-- row position -->
+    <section>
+        <h2>Позиция строк</h2>
+        <div class="grid-container">
+            <div class="grid-item color1">Grid Item 1</div>
+            <div class="grid-item color2 special-row-item1">Grid Item 2</div>
+            <div class="grid-item color3">Grid Item 3</div>
+            <div class="grid-item color4">Grid Item 4</div>
+            <div class="grid-item color5">Grid Item 5</div>
+            <div class="grid-item color1">Grid Item 6</div>
+            <div class="grid-item color4">Grid Item 7</div>
+        </div>
+    </section>
+
+    <!-- special span position -->
+    <section>
+        <h2>span</h2>
+        <div class="grid-container">
+            <div class="grid-item color1">Grid Item 1</div>
+            <div class="grid-item color2 special-span-item1">Grid Item 2</div>
+            <div class="grid-item color3">Grid Item 3</div>
+            <div class="grid-item color4">Grid Item 4</div>
+            <div class="grid-item color5">Grid Item 5</div>
+            <div class="grid-item color1">Grid Item 6</div>
+            <div class="grid-item color4">Grid Item 7</div>
+        </div>
+    </section>
+
+    <!-- grid-area position -->
+    <section>
+        <h2>grid-area</h2>
+        <div class="grid-container">
+            <div class="grid-item color1">Grid Item 1</div>
+            <div class="grid-item color2 grid-area-item1">Grid Item 2</div>
+            <div class="grid-item color3">Grid Item 3</div>
+            <div class="grid-item color4">Grid Item 4</div>
+            <div class="grid-item color5">Grid Item 5</div>
+            <div class="grid-item color1">Grid Item 6</div>
+            <div class="grid-item color4">Grid Item 7</div>
+        </div>
     </section>
 </body>
 </html>
