--- a/grid/superimposing-elements.html
+++ b/grid/superimposing-elements.html
@@ -5,16 +5,76 @@
     <title>Наложение элементов</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
-        /*  */
+        .grid-container {
+            height: 100vh;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 10px;
+        }
+        .grid-item {
+            text-align:center;
+            font-size: 1.1em;
+            padding: 1.5em;
+            color: white;
+            z-index: 1;
+        }
+        .item1{
+            grid-area: 1 / 1 / 3 / 4;
+            opacity: 0.8;
+        }
+        .item2{
+            grid-area: 1 / 1 / 2 / 2;
+        }
+        .item3{
+            grid-area: 1 / 3 / 2 / 4;
+        }
+        .item4{
+            grid-area: 2 / 1 / 3 / 2;
+        }
+        .item5{
+            grid-area: 2 / 2 / 3 / 3;
+        }
+        .item6{
+            grid-area: 2 / 3 / 3 / 4;
+        }
+        .item7{
+            grid-area: 3 / 1 / 4 / 2;
+        }
+        .color1 {background-color: #675BA7;}
+        .color2 {background-color: #9BC850;}
+        .color3 {background-color: #A62E5C;}
+        .color4 {background-color: #2A9FBC;}
+        .color5 {background-color: #4e342e;}
     </style>
 </head>
 <body>
     <!-- Header -->
     <header><nav><a href="./../"><< Главная</a></nav></header>
 
-    <!--  -->
+    <!-- superimposing elements -->
     <section>
-        <h2>###</h2>
+        <h2>Наложение элементов</h2>
+        <div class="grid-container">
+            <div class="grid-item item1 color2">Grid Item 2</div>
+            <div class="grid-item item2 color1">Grid Item 1</div>
+            <div class="grid-item item3 color3">Grid Item 3</div>
+            <div class="grid-item item4 color4">Grid Item 4</div>
+            <div class="grid-item item5 color1">Grid Item 5</div>
+            <div class="grid-item item6 color4">Grid Item 6</div>
+            <div class="grid-item item7 color5">Grid Item 7</div>
+        </div>
+        <br>
+        <h2>Z-INDEX</h2>
+        <div class="grid-container">
+            <div class="grid-item item1 color2" style="z-index: 10;">Grid Item 2</div>
+            <div class="grid-item item2 color1">Grid Item 1</div>
+            <div class="grid-item item3 color3">Grid Item 3</div>
+            <div class="grid-item item4 color4">Grid Item 4</div>
+            <div class="grid-item item5 color1">Grid Item 5</div>
+            <div class="grid-item item6 color4">Grid Item 6</div>
+            <div class="grid-item item7 color5">Grid Item 7</div>
+        </div>
     </section>
 </body>
 </html>
