--- a/grid/named-grid-lines.html
+++ b/grid/named-grid-lines.html
@@ -5,16 +5,98 @@
     <title>Именованные grid-линии</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
-        /*  */
+        .grid-container {
+            height: 100vh;
+            display: grid;
+            grid-template-columns: [col1start] 1fr [col1end] 10px 
+                                   [col2start] 1fr [col2end] 10px
+                                   [col3start] 1fr [col3end];
+            grid-template-rows: [row1start] 1fr [row1end] 10px
+                                [row2start] 1fr [row2end];
+        }
+        .grid-item {
+            background-color: #ddd;
+        }
+        .special-item{
+            grid-column: col1start / col2end;
+            grid-row: row1start;
+            background-color: #bbb;
+        }
+        .item1{
+            grid-column: col3start / col3end;
+            grid-row: row1start;
+        }
+        .item2{
+            grid-column: col1start / col1end;
+            grid-row: row2start;
+        }
+        .item3{
+            grid-column: col2start / col2end;
+            grid-row: row2start;
+        }
+        .item4{
+            grid-column: col3start / col3end;
+            grid-row: row2start;
+        }
+
+        /* EXAMPLE SITE */
+        .grid-container-site {
+            display: grid;
+            height: 100vh;
+            grid-template-rows: 6em 10px 1fr;
+            grid-template-columns: [mainstart] 1fr [mainend] 10px [sidebarestart] 25% [sidebarend];
+        }
+        .grid-item-content {
+            background-color: #455a64;
+            grid-row: 3 / 4;
+            grid-column: mainstart / mainend;
+        }
+        .grid-item-sidebar {
+            background-color: #37474f;
+            grid-row: 3 / 4;
+            grid-column: sidebarestart / sidebarend;
+        }
+        .grid-item-header{
+            background-color: #263238;
+            grid-row: 1 / 2;
+            grid-column: mainstart / sidebarend;
+        }
+        .grid-item-site {
+            color: #fff;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <!-- Header -->
     <header><nav><a href="./../"><< Главная</a></nav></header>
 
-    <!--  -->
+    <!-- Named grid lines -->
     <section>
-        <h2>###</h2>
+        <h2>Именованные grid-линии</h2>
+        <div class="grid-container">
+            <div class="grid-item special-item"></div>
+            <div class="grid-item item1"></div>
+            <div class="grid-item item2"></div>
+            <div class="grid-item item3"></div>
+            <div class="grid-item item4"></div>
+        </div>
+    </section>
+
+    <!-- Example site -->
+    <section>
+        <h2>Example site</h2>
+        <main class="grid-container-site">
+            <header class="grid-item-site grid-item-header">
+                <h1>Header</h1>
+            </header>
+            <article class="grid-item-site grid-item-content">
+                <h1>Main Content</h1>
+            </article>
+            <aside class="grid-item-site grid-item-sidebar">
+                <h1>Sidebar</h1>
+            </aside>
+        </main>
     </section>
 </body>
 </html>
