--- a/grid/named-grid-lines-and-repeats.html
+++ b/grid/named-grid-lines-and-repeats.html
@@ -5,16 +5,76 @@
     <title>Именованные grid-линии и функция repeat</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
-        /*  */
+        .grid-container {
+            height:100vh;
+            display: grid;
+        }
+        .grid-container-v1 {
+            grid-template-columns: 10px repeat(3, [column] 1fr [colgutter] 10px);
+            grid-template-rows: 10px repeat(2, [row] 1fr [rowgutter] 10px);
+        }
+        .grid-container-v2 {
+            grid-template-columns: 10px repeat(3, [column] 1fr [colgutter] 10px) 
+                                    [sidebarstart] 150px [sidebarend] 10px;
+            grid-template-rows: 10px repeat(2, [row] 1fr [rowgutter] 10px);
+        }
+        .grid-item {
+            background-color: #ddd;
+        }
+        .special-item {
+            grid-column: column 2;
+            grid-row: row 1;
+            background-color: #bbb;
+        }
+        .item1{
+            grid-column: column 1;
+            grid-row: row 1;
+        }
+        .item2{
+            grid-column: column 3;
+            grid-row: row 1;
+        }
+        .item3{
+            grid-column: column 1;
+            grid-row: row 2;
+        }
+        .item4{
+            grid-column: column 2;
+            grid-row: row 2;
+        }
+        .sidebar {
+            grid-column: sidebarstart / sidebarend;
+            grid-row: 2 / 5;
+            background-color: #ccc;
+        }
     </style>
 </head>
 <body>
     <!-- Header -->
     <header><nav><a href="./../"><< Главная</a></nav></header>
 
-    <!--  -->
+    <!-- grid-line and repeat function -->
     <section>
-        <h2>###</h2>
+        <h2>Именованные grid-линии и функция repeat</h2>
+        <div class="grid-container grid-container-v1">
+            <div class="grid-item special-item"></div>
+            <div class="grid-item item1"></div>
+            <div class="grid-item item2"></div>
+            <div class="grid-item item3"></div>
+            <div class="grid-item item4"></div>
+        </div>
+
+        <br>
+        <h2>+ sidebar</h2>
+
+        <div class="grid-container grid-container-v2">
+            <div class="grid-item special-item"></div>
+            <div class="grid-item item1"></div>
+            <div class="grid-item item2"></div>
+            <div class="grid-item item3"></div>
+            <div class="grid-item item4"></div>
+            <div class="grid-item sidebar"></div>
+        </div>
     </section>
 </body>
 </html>
