--- a/flexbox/justify-content-2.html
+++ b/flexbox/justify-content-2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Выравнивание элементов. align-items и align-self</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
