--- a/flexbox/managing-elements.html
+++ b/flexbox/managing-elements.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Управление элементами. flex-basis, flex-shrink и flex-grow</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
