--- a/grid/margins.html
+++ b/grid/margins.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Отступы между столбцами и строками</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
