--- a/grid/named-grid-lines-and-repeats.html
+++ b/grid/named-grid-lines-and-repeats.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Именованные grid-линии и функция repeat</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
